# pgr

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  subset.chain
.github/workflows/: publish.yml
benches/: bitmap_intspan_benchmark.rs  hier_benchmark.rs  pbit_benchmark.rs
docs/: axt.md  cactus.md  cactus_lastz.md  chain.md  clust-boot.md  clust-cut.md  clust-dbscan.md  clust-eval.md  clust-hier.md  clust.md  dist.md  fa.md  fa_index.md  fas.md  formats.md  fq.md  gfa.md  gff.md  hclust.md  kaks.md  lav.md  maf.md  mat-transform.md  mat.md  ms-to-dna.md  ms.md  ms2dna.md  ms2dna_port.md  multiz.md  net.md  nrps.tex  nwk-cut.md  nwk-eval.md  nwk-metrics.md  nwk.md  paf.md  pbit.md  phylo.md  pl.md  plot.md  (+5 more)
docs/benchmark/: fasta.md
docs/formats/: README.md  axt.md  chain.md  cigar.md  distance.md  lav.md  loc.md  net.md  psl.md  twobit.md
notes/: cactus.md  cactus_lastz.md  chain-algorithm-reuse.md  chain-algorithms.md  developer-cheatsheet.md  developer.md  ecoli-cohort.md  graph-design.md  impg.md  minigraph.md  paf-implementation.md  paf-pangenome.md  paf-route.md  pairwise-selection.md  pangenome-tools.md  project-understanding.md  seqwish.md  smoothxg.md
notes/design/: agc-port.md  clust-boot.md  clust-impl.md  clust-planned.md  dbscan-planned.md  dist-roadmap.md  fas-multiz.md  ms2dna_port.md  multiz.md  nwk-eval.md  pbit-paf-mode.md  pbit.md  phylo.md  spoa_port.md  ucsc.md
notes/references/: agc-cpp.md  cactus.md  cactus_lastz.md  fastk.md  gfa.md  impg.md  kaks.md  minigraph.md  multiz.md  pangenome-tools.md  seqwish.md  smoothxg.md  ucsc.md
scripts/: pgr-repeat.sh
src/: fasr.rs  lib.rs  pgr.rs
src/cmd_fasr/: axt2fas.rs  check.rs  concat.rs  consensus.rs  cover.rs  create.rs  filter.rs  join.rs  link.rs  maf2fas.rs  mod.rs  name.rs  pl_p2m.rs  refine.rs  replace.rs  separate.rs  slice.rs  split.rs  stat.rs  subset.rs  variation.rs  vcf.rs  xlsx.rs
src/cmd_pgr/: args.rs  chain.rs  mod.rs  ms2dna.rs  ms_to_dna.rs  pipeline.rs  rept.rs  trf.rs
src/libs/: alignment.rs  axt.rs  chain.rs  fas.rs  fas_multiz.rs  fas_xlsx.rs  hash.rs  hv.rs  io.rs  lastz.rs  lav.rs  linalg.rs  loc.rs  mod.rs  ms.rs  ms2dna.rs  net.rs  nt.rs  pairmat.rs  par.rs  psl.rs  seq.rs  translate.rs  twobit.rs
temp_out/: cat.net
tests/: cli_2bit.rs  cli_2bit_some.rs  cli_axt.rs  cli_chain.rs  cli_chain_net_complex.rs  cli_chain_split.rs  cli_chain_stitch.rs  cli_chaining.rs  cli_clust.rs  cli_clust_cut.rs  cli_clust_cut_dynamic.rs  cli_clust_cut_hybrid.rs  cli_clust_eval.rs  cli_clust_eval_batch.rs  cli_clust_eval_tree.rs  cli_clust_flat.rs  cli_clust_pipeline.rs  cli_clust_tree.rs  cli_dist.rs  cli_fa.rs  cli_fa_index.rs  cli_fa_window.rs  cli_fas.rs  cli_fas_multiz.rs  cli_fas_poa.rs  cli_fas_vars.rs  cli_fas_vcf.rs  cli_fasr.rs  cli_fasr_vars.rs  cli_fasr_vcf.rs  cli_fq.rs  cli_gff.rs  cli_lastz.rs  cli_lav.rs  cli_maf.rs  cli_mat.rs  cli_mat_build.rs  cli_ms.rs  cli_ms2dna.rs  cli_ms_to_dna.rs  (+40 more)
tests/clust/: disjoint_2.tsv  pair_2.tsv  perfect_1.tsv  single_1.tsv  singletons.tsv
tests/common/: mod.rs
tests/fas/: refine.fas
tests/fasta/: ufasta.2bit
tests/genome/: mg1655.2bit
tests/index/: final.contigs.2bit
tests/manual_test/: test.net
tests/mat/: avg_test.nwk  scan_test.nwk  scipy_Q_X.phy  scipy_tree.nwk
tests/metagenome/: 3300030246.fna.gz.loc
tests/multiz/: S288cvsRM11_1a.maf  S288cvsSpar.maf
tests/newick/: catarrhini.comment.nwk  catarrhini.replace.tsv  forest.replace.tsv  mixed_comments.replace.tsv  noise.nwk  nolbl_ingrp.nwk  replace_remove.tsv  root.nwk
tests/pgr/: all.chain  lastz.lav  lastz.psl  noClass.net  over.chain  pseudocat.chainnet  pseudopig.chainnet  (+2 more)
(+517 files in other folders)
