[package]
name = "pgr"
version = "0.1.0"
authors = ["wang-q <wang-q@outlook.com>"]
edition = "2021"
description = "Practical Genome Refiner"
documentation = "https://github.com/wang-q/pgr"
readme = "README.md"
homepage = "https://github.com/wang-q/pgr"
repository = "https://github.com/wang-q/pgr"
license = "MIT"
categories = ["command-line-utilities", "science"]
publish = false

[dependencies]
clap = { version = "4.5.28", features = ["cargo"] }
anyhow = "1.0.93"
regex = "1.11.1"
lazy_static = "1.5.0"
itertools = "0.14.0"

crossbeam = "0.8.4"

indexmap = "2.13.0"
lru = "0.13.0"
rapidhash = { version = "1.4.0", features = ["rng"] }

intspan = "0.8.7"
noodles = { version = "0.104.0", features = ["core", "fasta", "fastq", "bgzf"] }
noodles-core = "0.18.0"
noodles-fasta = "0.58.0"
noodles-fastq = "0.21.0"
noodles-bgzf = "0.45.0"

which = "7.0.0"
tempfile = "3.14.0"

rust_xlsxwriter = "0.83.0"
bio = "0.30.1"
cmd_lib = "1.9.6"
flate2 = "1.1.8"

[[bin]]
name = "pgr"
path = "src/pgr.rs"

[build-dependencies]

[dev-dependencies]
calamine = "0.26.1"
assert_cmd = "2.0.14"
predicates = "3.1.0"
approx = "0.5.1"
criterion = "0.5.1"

[profile.release]
lto = true
